Handler and some fix bugs
